--- a/ArrowFuncArray.html
+++ b/ArrowFuncArray.html
@@ -36,6 +36,8 @@
         {productName: "phone4", price: 21000}
 
     ];
+    products[0].price = 45;
+    console.log(products[0].productName, products[0].price);
 
     /*const res = products.filter(product => product.price > 15000);
     console.log(res);*/
