--- a/destructing.html
+++ b/destructing.html
@@ -13,10 +13,10 @@
         /*let fname = name[0];
         let sname = name[1];*/
 
-        //let [fname, sname] = name;
-        //let [fname, sname] = "taylor swift".split(" ");
+        //let [fname, sname] = name; //the operation above is done in here
+        //let [fname, sname] = "taylor swift".split(" "); //also here
 
-        console.log(fname,sname);
+        //console.log(fname,sname);
 
         let user = ["mona","lisa","izmir", "istanbul"];
 
