--- a/map.html
+++ b/map.html
@@ -22,13 +22,14 @@
         console.log(students.get("32435454265"));
         console.log(students.get(true));
         console.log(students.get(user));
+        
 
 
-
-        let res ;
+        let res;
 
         res = students.size;
-        res =students.has(2);
+        res =students.has(1);
+        console.log("has fonksiyonu" , students.has("name2"));
 
         //students.delete(1); //deletes 1
         res = students.size;
