--- a/spread.html
+++ b/spread.html
@@ -28,22 +28,25 @@
 
         const numbers1 = [1,2,3];
         
-        const numbers2 = numbers1; //referance copy 
-        numbers2[0] = 10;
-        console.log(numbers1,numbers2);
+        //  const numbers2 = numbers1; //referance copy 
+        // numbers2[0] = 10;
+        // console.log(numbers1,numbers2);
         
-        const numbers2 = numbers1; //value copy
-        const numbers2 = [...numbers1];
+        let numbers2 = numbers1; //value copy
+        numbers2 = [...numbers1]; //?
         console.log(numbers1,numbers2);
 
         const user = {
+            name: "name1",
+            surname: "surname2",
             username: "zeynep",
             email:"info@gmail.com"
         }
 
         const address = {
-            username: "ze", //this will be printed
-            city: "izmir"
+            //username: "ze", //this will be printed
+            city: "izmir",
+            country: "Türkiye"
         }
 
         function sum(...args) {
@@ -55,13 +58,15 @@
         }
 
         let x = sum(4, 9, 16, 25, 29, 100, 66, 77);
+
         console.log(sum(1,3,5));
         console.log(sum(2,3,4,5));
 
         function show(name, surname, ...address){
             console.log(name, surname, address);
         }
-        show("n", "s", "istanbul", "bebek")
+        show(user.name, user.surname
+        , address.city, address.country);
     </script>
    
 
